--- a/docker/apache_httpd.conf
+++ b/docker/apache_httpd.conf
@@ -9,7 +9,7 @@ LoadModule dir_module modules/mod_dir.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
 Listen 80
-Listen ${_APACHE_SERVER_PORT}
+Listen ${APACHE_SERVER_PORT}
 
 ServerName localhost
 
@@ -35,14 +35,14 @@ SSLPassPhraseDialog builtin
 SSLSessionCache "shmcb:/usr/local/apache2/logs/ssl_scache(512000)"
 SSLSessionCacheTimeout 300
 
-<VirtualHost *:${_APACHE_SERVER_PORT}>
+<VirtualHost *:${APACHE_SERVER_PORT}>
     SSLEngine on
-    SSLCertificateFile "${_PATH_ROOT}certificate/tls.crt"
-    SSLCertificateKeyFile "${_PATH_ROOT}certificate/tls.key"
+    SSLCertificateFile "${PATH_ROOT}certificate/tls.crt"
+    SSLCertificateKeyFile "${PATH_ROOT}certificate/tls.key"
 
-    DocumentRoot ${_PATH_ROOT}project/jsmvcfw_app/root/public/
+    DocumentRoot ${PATH_ROOT}project/jsmvcfw_app/root/public/
 
-    <Directory "${_PATH_ROOT}project/jsmvcfw_app/root/public/">
+    <Directory "${PATH_ROOT}project/jsmvcfw_app/root/public/">
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
