--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -19,31 +19,32 @@ ENV PYTHON_JUPYTER_PORT=${_PYTHON_JUPYTER_PORT}
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
+ENV SUDO_FORCE_REMOVE=yes
 ENV PATH="${PATH}:${PATH_ROOT}.local/bin/:/root/.local/bin/"
 ENV PYTHONPATH="${PATH_ROOT}"
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
-ENV SUDO_FORCE_REMOVE=yes
 
 COPY ./certificate/proxy/ /usr/local/share/ca-certificates/
 
 RUN cd ~ \
-    && VERSION_CODENAME=$(grep VERSION_CODENAME= /etc/os-release | cut -d= -f2) \
-    && chmod -R 0644 /usr/local/share/ca-certificates/ \
-    && apt-get update && apt-get install -y ca-certificates gnupg curl \
-    && update-ca-certificates \
     # No root
-    && groupadd -g 1000 pyuser \
-    && useradd -d ${PATH_ROOT} -s /bin/bash -u 1000 -g 1000 pyuser \
     && mkdir -p ${PATH_ROOT} \
+    && useradd -U pyuser -d ${PATH_ROOT} -s /bin/bash \
     && chown -R pyuser:pyuser ${PATH_ROOT} \
     && chmod -R 775 ${PATH_ROOT} \
+    # Update
+    && VERSION_CODENAME=$(grep VERSION_CODENAME= /etc/os-release | cut -d= -f2) \
+    && chmod -R 0644 /usr/local/share/ca-certificates/ \
+    && apt-get update && apt-get install -y ca-certificates curl \
+    && update-ca-certificates \
     # Apt
     && apt-get update && apt-get install -y \
     fonts-noto \
     fonts-noto-cjk \
     # Clean
+    && apt-get remove --purge -y sudo \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean -y \
     && apt-get autoclean -y \
