--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -4,17 +4,15 @@ FROM httpd:${_APACHE_VERSION}
 
 ARG _ENV_NAME
 ARG _DOMAIN
-ARG _TIMEZONE
+ARG _TIME_ZONE
 ARG _LANG
-ARG _SERVER_LOCATION
 ARG _PATH_ROOT
 ARG _APACHE_SERVER_PORT
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
-ENV TZ=${_TIMEZONE}
+ENV TZ=${_TIME_ZONE}
 ENV LANG=${_LANG}
-ENV SERVER_LOCATION=${_SERVER_LOCATION}
 ENV PATH_ROOT=${_PATH_ROOT}
 ENV APACHE_VERSION=${_APACHE_VERSION}
 ENV APACHE_SERVER_PORT=${_APACHE_SERVER_PORT}
