--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -4,17 +4,15 @@ FROM python:${_PYTHON_VERSION}
 
 ARG _ENV_NAME
 ARG _DOMAIN
-ARG _TIMEZONE
+ARG _TIME_ZONE
 ARG _LANG
-ARG _SERVER_LOCATION
 ARG _PATH_ROOT
 ARG _PYTHON_JUPYTER_PORT
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
-ENV TZ=${_TIMEZONE}
+ENV TZ=${_TIME_ZONE}
 ENV LANG=${_LANG}
-ENV SERVER_LOCATION=${_SERVER_LOCATION}
 ENV PATH_ROOT=${_PATH_ROOT}
 ENV PYTHON_VERSION=${_PYTHON_VERSION}
 ENV PYTHON_JUPYTER_PORT=${_PYTHON_JUPYTER_PORT}
