--- a/env/local.env
+++ b/env/local.env
@@ -4,9 +4,8 @@ DISPLAY=':0'
 
 ENV_NAME='local'
 DOMAIN='localhost'
-TIMEZONE='Asia/Tokyo'
+TIME_ZONE='Asia/Tokyo'
 LANG='C.UTF-8'
-SERVER_LOCATION='jp'
 PATH_ROOT='/home/root/'
 
 NODEJS_VERSION='22.12.0'
