--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -4,18 +4,16 @@ FROM node:${_NODEJS_VERSION}
 
 ARG _ENV_NAME
 ARG _DOMAIN
-ARG _TIMEZONE
+ARG _TIME_ZONE
 ARG _LANG
-ARG _SERVER_LOCATION
 ARG _PATH_ROOT
 ARG _NODEJS_SERVER_PORT
 ARG _NODEJS_SERVER_PORT_RANGE
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
-ENV TZ=${_TIMEZONE}
+ENV TZ=${_TIME_ZONE}
 ENV LANG=${_LANG}
-ENV SERVER_LOCATION=${_SERVER_LOCATION}
 ENV PATH_ROOT=${_PATH_ROOT}
 ENV NODEJS_VERSION=${_NODEJS_VERSION}
 ENV NODEJS_SERVER_PORT=${_NODEJS_SERVER_PORT}
