--- a/env/local.env
+++ b/env/local.env
@@ -1,5 +1,5 @@
 BUILD_ENV='development'
-COMPOSE_PROJECT_NAME='one_workspace_local'
+COMPOSE_PROJECT_NAME='cimo_local'
 DISPLAY=':0'
 
 ENV_NAME='local'
