--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,19 +11,21 @@
     "eslint.format.enable": true,
     "containers.commands.attach": "${containerCommand} exec -it ${containerId} bash",
     "[dockercompose]": {
-        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+        "editor.defaultFormatter": "ms-azuretools.vscode-containers"
     },
     "[dockerfile]": {
-        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+        "editor.defaultFormatter": "ms-azuretools.vscode-containers"
     },
     "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.formatOnSave": false
     },
     "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.formatOnSave": false
     },
     "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
@@ -32,20 +34,10 @@
     "l13Diff.exclude": [
         ".git",
         ".cache",
-        ".config",
+        ".ipython",
+        ".jupyter",
         ".local",
-        ".npm",
-        ".pki",
-        "node_modules",
         "log",
-        "dist",
-        "file/document",
-        "file/input",
-        "file/output",
-        "file/web_app",
-        "public/file",
-        "public/js",
-        "public/style",
         "kubernetes"
     ],
     "l13Diff.ignoreEndOfLine": false,
