--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .DS_Store
+MANIFEST
+__pycache__
+.coverage
+.tox/
+*.egg-info
+*.pot
+*.py[co]
 
 # Log files
 npm-debug.log*
@@ -14,22 +21,15 @@ pnpm-debug.log*
 *.sw?
 
 # cimo +
-.cache/*
-.config/*
-.local/*
-.npm/*
-.pki/*
+.cache
+.ipython
+.jupyter
+.local
 certificate/*
 !certificate/**/
 certificate/proxy/*
 !certificate/proxy/.gitkeep
-dist/*
 log/*
 !log/.gitkeep
-node_modules
-package-lock.json
-# ---
-.ipython/*
-.jupyter
 project/*
 !project/.gitkeep
