--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ pnpm-debug.log*
 .jupyter
 .local
 certificate/*
-!certificate/**/
+!certificate/.gitkeep
 certificate/proxy/*
 !certificate/proxy/.gitkeep
 log/*
