--- a/env/local.env
+++ b/env/local.env
@@ -6,7 +6,7 @@ ENV_NAME='local'
 DOMAIN='localhost'
 TIME_ZONE='Asia/Tokyo'
 LANG='C.UTF-8'
-PATH_ROOT='/home/root/'
+PATH_ROOT='/home/app/'
 
 NODEJS_VERSION='22.12.0'
 NODEJS_SERVER_PORT='1443'
