--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
     "l13Diff.exclude": [
         ".git",
         ".cache",
+        ".config",
         ".ipython",
         ".jupyter",
         ".local",
+        ".pki",
         "log",
-        "kubernetes"
+        "project"
     ],
     "l13Diff.ignoreEndOfLine": false,
     "l13Diff.ignoreTrimWhitespace": "default",
