--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -40,6 +40,30 @@ RUN cd ~ \
     && apt-get update && apt-get install -y \
     fonts-noto \
     fonts-noto-cjk \
+    media-types \
+    # GPU
+    fuse \
+    libfuse2 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnss3 \
+    libnspr4 \
+    libx11-6 \
+    libxext6 \
+    libxrender1 \
+    libxrandr2 \
+    libfreetype6 \
+    libfontconfig1 \
+    libasound2 \
+    libgomp1 \
+    libgbm1 \
+    libglu1-mesa \
+    libvulkan1 \
+    mesa-vulkan-drivers \
+    mesa-utils \
+    xdg-utils \
+    dbus \
+    dbus-x11 \
     # Electron
     libnss3-dev \
     libgtk-3-dev \
@@ -61,6 +85,12 @@ WORKDIR ${PATH_ROOT}
 # Tls
 CMD chmod +x ${PATH_ROOT}docker/tls.sh \
     && bash ${PATH_ROOT}docker/tls.sh \
+    # Nvidia
+    && command -v nvidia-smi > /dev/null && nvidia-smi --query-gpu=name --format=csv,noheader || echo "Host without nvidia GPU." \
+    # Vulkan
+    && command -v vulkaninfo > /dev/null && vulkaninfo | grep "deviceName" || echo "Host without vulkan support." \
+    # OpenGL
+    && command -v glxinfo > /dev/null && glxinfo | grep "OpenGL renderer string" || echo "Host without opengl support." \
     # Keep running
     && tail -f /dev/null
 
