--- a/docker-compose-gpu.yaml
+++ b/docker-compose-gpu.yaml
@@ -1,6 +1,6 @@
 services:
-  cimo_ow_nodejs:
-    container_name: cimo-ow-nodejs
+  cimo_ow_nodejs_gpu:
+    container_name: cimo-ow-nodejs-gpu
     env_file:
       - ./env/local.env
     build:
@@ -22,8 +22,15 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:${PATH_ROOT}
       - /tmp/.X11-unix:/tmp/.X11-unix
-  cimo_ow_python:
-    container_name: cimo-ow-python
+      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+    cap_add:
+      - SYS_ADMIN
+    devices:
+      - /dev/fuse:/dev/fuse
+      - /dev/dri:/dev/dri
+    runtime: "nvidia"
+  cimo_ow_python_gpu:
+    container_name: cimo-ow-python-gpu
     env_file:
       - ./env/local.env
     build:
@@ -43,8 +50,15 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:${PATH_ROOT}
       - /tmp/.X11-unix:/tmp/.X11-unix
+      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+    cap_add:
+      - SYS_ADMIN
+    devices:
+      - /dev/fuse:/dev/fuse
+      - /dev/dri:/dev/dri
+    runtime: "nvidia"
     depends_on:
-      - cimo_ow_nodejs
+      - cimo_ow_nodejs_gpu
   cimo_ow_apache:
     container_name: cimo-ow-apache
     env_file:
@@ -67,4 +81,4 @@ services:
       - ./:${PATH_ROOT}
       - /tmp/.X11-unix:/tmp/.X11-unix
     depends_on:
-      - cimo_ow_nodejs
+      - cimo_ow_nodejs_gpu
