--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -43,6 +43,30 @@ RUN cd ~ \
     && apt-get update && apt-get install -y \
     fonts-noto \
     fonts-noto-cjk \
+    media-types \
+    # GPU
+    fuse \
+    libfuse2 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnss3 \
+    libnspr4 \
+    libx11-6 \
+    libxext6 \
+    libxrender1 \
+    libxrandr2 \
+    libfreetype6 \
+    libfontconfig1 \
+    libasound2 \
+    libgomp1 \
+    libgbm1 \
+    libglu1-mesa \
+    libvulkan1 \
+    mesa-vulkan-drivers \
+    mesa-utils \
+    xdg-utils \
+    dbus \
+    dbus-x11 \
     # Clean
     && apt-get remove --purge -y sudo \
     && rm -rf /var/lib/apt/lists/* \
@@ -57,6 +81,12 @@ WORKDIR ${PATH_ROOT}
 # Pip
 CMD python3 -m pip install pip --upgrade \
     && python3 -m pip install --user --trusted-host pypi.python.org --trusted-host files.pythonhosted.org --trusted-host pypi.org -r ${PATH_ROOT}docker/python_requirements.txt \
+    # Nvidia
+    && command -v nvidia-smi > /dev/null && nvidia-smi --query-gpu=name --format=csv,noheader || echo "Host without nvidia GPU." \
+    # Vulkan
+    && command -v vulkaninfo > /dev/null && vulkaninfo | grep "deviceName" || echo "Host without vulkan support." \
+    # OpenGL
+    && command -v glxinfo > /dev/null && glxinfo | grep "OpenGL renderer string" || echo "Host without opengl support." \
     # Jupyter lab
     && jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token='' --NotebookApp.password=''
 
