--- a/docker-compose-cpu.yaml
+++ b/docker-compose-cpu.yaml
@@ -15,9 +15,7 @@ services:
         _NODEJS_VERSION: ${NODEJS_VERSION}
         _NODEJS_SERVER_PORT: ${NODEJS_SERVER_PORT}
         _NODEJS_SERVER_PORT_RANGE: ${NODEJS_SERVER_PORT_RANGE}
-    ports:
-      - 127.0.0.1:${NODEJS_SERVER_PORT}:${NODEJS_SERVER_PORT}
-      - 127.0.0.1:${NODEJS_SERVER_PORT_RANGE}:${NODEJS_SERVER_PORT_RANGE}
+    network_mode: "host"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:${PATH_ROOT}
@@ -42,8 +40,7 @@ services:
         _PATH_ROOT: ${PATH_ROOT}
         _PYTHON_VERSION: ${PYTHON_VERSION}
         _PYTHON_JUPYTER_PORT: ${PYTHON_JUPYTER_PORT}
-    ports:
-      - 127.0.0.1:${PYTHON_JUPYTER_PORT}:${PYTHON_JUPYTER_PORT}
+    network_mode: "host"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:${PATH_ROOT}
