--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -25,6 +25,7 @@ ENV SUDO_FORCE_REMOVE=yes
 ENV NODE_OPTIONS=--use-openssl-ca
 
 COPY ./certificate/proxy/ /usr/local/share/ca-certificates/
+COPY ./docker/NotoSansJP-Regular.ttf /usr/share/fonts/truetype/noto/
 
 RUN cd ~ \
     # No root
@@ -38,12 +39,8 @@ RUN cd ~ \
     && update-ca-certificates \
     # Apt
     && apt-get update && apt-get install -y \
-    fonts-noto \
-    fonts-noto-cjk \
     media-types \
     # GPU
-    fuse \
-    libfuse2 \
     libglib2.0-0 \
     libgtk-3-0 \
     libnss3 \
