--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -27,6 +27,7 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 
 COPY ./certificate/proxy/ /usr/local/share/ca-certificates/
+COPY ./docker/NotoSansJP-Regular.ttf /usr/share/fonts/truetype/noto/
 
 RUN cd ~ \
     # No root
@@ -41,12 +42,8 @@ RUN cd ~ \
     && update-ca-certificates \
     # Apt
     && apt-get update && apt-get install -y \
-    fonts-noto \
-    fonts-noto-cjk \
     media-types \
     # GPU
-    fuse \
-    libfuse2 \
     libglib2.0-0 \
     libgtk-3-0 \
     libnss3 \
