--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -33,8 +33,10 @@ RUN cd ~ \
     # Update
     && VERSION_CODENAME=$(grep VERSION_CODENAME= /etc/os-release | cut -d= -f2) \
     && chmod -R 0644 /usr/local/share/ca-certificates/ \
-    && apt-get update && apt-get install -y ca-certificates curl gettext-base \
+    && apt-get update && apt-get install -y ca-certificates tzdata curl media-types gettext-base \
     && update-ca-certificates \
+    && ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} > /etc/timezone \
+    && echo "application/typescript ts" >> /etc/mime.types \
     # Httpd env
     && envsubst '${PATH_ROOT},${APACHE_SERVER_PORT}' < /usr/local/apache2/conf/httpd.conf.template > /usr/local/apache2/conf/httpd.conf \
     # Apt
