--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -1,6 +1,4 @@
-ARG _APACHE_VERSION
-
-FROM httpd:${_APACHE_VERSION}
+FROM httpd:2.4.62
 
 ARG _ENV_NAME
 ARG _DOMAIN
@@ -14,7 +12,6 @@ ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIME_ZONE}
 ENV LANG=${_LANG}
 ENV PATH_ROOT=${_PATH_ROOT}
-ENV APACHE_VERSION=${_APACHE_VERSION}
 ENV APACHE_SERVER_PORT=${_APACHE_SERVER_PORT}
 
 ENV DEBIAN_FRONTEND=noninteractive
