--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -1,6 +1,4 @@
-ARG _NODEJS_VERSION
-
-FROM node:${_NODEJS_VERSION}
+FROM node:22.12.0
 
 ARG _ENV_NAME
 ARG _DOMAIN
@@ -15,7 +13,6 @@ ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIME_ZONE}
 ENV LANG=${_LANG}
 ENV PATH_ROOT=${_PATH_ROOT}
-ENV NODEJS_VERSION=${_NODEJS_VERSION}
 ENV NODEJS_SERVER_PORT=${_NODEJS_SERVER_PORT}
 ENV NODEJS_SERVER_PORT_RANGE=${_NODEJS_SERVER_PORT_RANGE}
 
@@ -66,6 +63,9 @@ RUN cd ~ \
     mesa-vulkan-drivers \
     mesa-utils \
     xdg-utils \
+    libxcb1 \
+    libx11-xcb1 \
+    libcairo2 \
     # Electron
     libnss3-dev \
     libgtk-3-dev \
@@ -85,7 +85,7 @@ USER node
 WORKDIR ${PATH_ROOT}
 
 # Tls
-CMD bash ${PATH_ROOT}docker/tls.sh \
+CMD bash ${PATH_ROOT}script/tls.sh \
     # Nvidia
     && command -v nvidia-smi > /dev/null && nvidia-smi --query-gpu=name --format=csv,noheader || echo "Host without nvidia GPU." \
     # Vulkan
