--- a/docker/apache_httpd.conf
+++ b/docker/apache_httpd.conf
@@ -40,22 +40,22 @@ SSLSessionCacheTimeout 300
     SSLCertificateFile "${PATH_ROOT}certificate/tls.crt"
     SSLCertificateKeyFile "${PATH_ROOT}certificate/tls.key"
 
-    #DocumentRoot ${PATH_ROOT}project/jsmvcfw_app/public/
+    DocumentRoot ${PATH_ROOT}project/app_jsmvcfw/public/
 
-    #<Directory "${PATH_ROOT}project/jsmvcfw_app/public/">
-        #Options Indexes FollowSymLinks
-        #AllowOverride All
-        #Require all granted
+    <Directory "${PATH_ROOT}project/app_jsmvcfw/public/">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
 
-        #RewriteEngine On
-        #RewriteBase /
-        #RewriteRule ^index\.html$ - [L]
-        #RewriteCond %{REQUEST_FILENAME} !-f
-        #RewriteCond %{REQUEST_FILENAME} !-d
-        #RewriteRule . /index.html [L]
+        RewriteEngine On
+        RewriteBase /
+        RewriteRule ^index\.html$ - [L]
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule . /index.html [L]
 
-        #DirectoryIndex index.html index.php
-    #</Directory>
+        DirectoryIndex index.html index.php
+    </Directory>
 
     ErrorLog /usr/local/apache2/logs/error_log
     CustomLog /usr/local/apache2/logs/access_log common
