--- a/docker/apache_httpd.conf
+++ b/docker/apache_httpd.conf
@@ -8,10 +8,9 @@ LoadModule ssl_module modules/mod_ssl.so
 LoadModule dir_module modules/mod_dir.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
-Listen 80
-Listen ${APACHE_SERVER_PORT}
-
 ServerName localhost
+
+Listen 80
 
 <VirtualHost *:80>
     <Location "/server-status">
@@ -25,6 +24,8 @@ ServerName localhost
     ErrorLog /usr/local/apache2/logs/error_log
     CustomLog /usr/local/apache2/logs/access_log common
 </VirtualHost>
+
+Listen ${APACHE_SERVER_PORT}
 
 SSLCipherSuite HIGH:MEDIUM:!MD5:!RC4:!3DES
 SSLProxyCipherSuite HIGH:MEDIUM:!MD5:!RC4:!3DES
@@ -50,6 +51,7 @@ SSLSessionCacheTimeout 300
         RewriteEngine On
         RewriteBase /
         RewriteRule ^index\.html$ - [L]
+        RewriteCond %{REQUEST_URI} !^/server-status$
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteRule . /index.html [L]
