--- a/docker/apache_httpd.conf
+++ b/docker/apache_httpd.conf
@@ -38,8 +38,8 @@ SSLSessionCacheTimeout 300
 
 <VirtualHost *:${APACHE_SERVER_PORT}>
     SSLEngine on
-    SSLCertificateFile "${PATH_ROOT}certificate/tls.crt"
-    SSLCertificateKeyFile "${PATH_ROOT}certificate/tls.key"
+    SSLCertificateFile "/usr/local/share/ca-certificates/tls.crt"
+    SSLCertificateKeyFile "/usr/local/share/ca-certificates/tls.key"
 
     DocumentRoot ${PATH_ROOT}project/app_jsmvcfw/public/
 
