--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -23,6 +23,8 @@ ENV NODE_OPTIONS=--use-openssl-ca
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=all
 ENV VK_ICD_FILENAMES=/usr/share/vulkan/icd.d/lvp_icd.x86_64.json
+ENV PATH="/home/node/.cargo/bin:${PATH}"
+ENV RUST_BACKTRACE=1
 
 COPY ./certificate/* /usr/local/share/ca-certificates/
 COPY ./docker/NotoSansJP-Regular.ttf /usr/share/fonts/truetype/noto/
@@ -66,13 +68,12 @@ RUN cd ~ \
     libxcb1 \
     libx11-xcb1 \
     libcairo2 \
-    # Electron
-    libnss3-dev \
-    libgtk-3-dev \
-    libgdk-pixbuf2.0-dev \
-    libxss-dev \
-    libxtst-dev \
-    libasound2-dev \
+    # Tauri
+    libwebkit2gtk-4.1-dev \
+    libxdo-dev \
+    libssl-dev \
+    libayatana-appindicator3-dev \
+    librsvg2-dev \
     # Clean
     && apt-get remove --purge -y sudo \
     && rm -rf /var/lib/apt/lists/* \
@@ -81,6 +82,11 @@ RUN cd ~ \
     && apt-get autoremove -y
 
 USER node
+
+# Rust
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+    && rustup target add i686-pc-windows-msvc \
+    && rustup target add aarch64-pc-windows-msvc
 
 WORKDIR ${PATH_ROOT}
 
@@ -92,6 +98,9 @@ CMD bash ${PATH_ROOT}script/tls.sh \
     && command -v vulkaninfo > /dev/null && vulkaninfo | grep "deviceName" || echo "Host without vulkan support." \
     # OpenGL
     && command -v glxinfo > /dev/null && glxinfo | grep "OpenGL renderer string" || echo "Host without opengl support." \
+    # Rust
+    && rustc --version \
+    && cargo --version \
     # Keep running
     && tail -f /dev/null
 
