--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -79,10 +79,6 @@ RUN cd ~ \
     lld \
     llvm \
     clang \
-    osslsigncode \
-    libengine-pkcs11-openssl libp11-3 \
-    opensc \
-    softhsm2 \
     # Clean
     && apt-get remove --purge -y sudo \
     && rm -rf /var/lib/apt/lists/* \
@@ -94,6 +90,8 @@ USER node
 
 # Rust
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+    && rustup target add x86_64-unknown-linux-gnu \
+    && rustup target add aarch64-unknown-linux-gnu \
     && rustup target add x86_64-pc-windows-msvc \
     && rustup target add aarch64-pc-windows-msvc \
     && cargo install --locked cargo-xwin
