--- a/docker-compose-gpu.yaml
+++ b/docker-compose-gpu.yaml
@@ -22,6 +22,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     devices:
       - /dev/dri:/dev/dri
     runtime: "nvidia"
@@ -46,6 +48,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     devices:
       - /dev/dri:/dev/dri
     runtime: "nvidia"
@@ -70,5 +74,7 @@ services:
     volumes:
       - ./:${PATH_ROOT}
       - /var/run/docker.sock:/var/run/docker.sock
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - cimo_ow_nodejs_gpu
