--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -83,11 +83,9 @@ WORKDIR ${PATH_ROOT}
 # Pip
 CMD python3 -m pip install pip --upgrade \
     && python3 -m pip install --user --trusted-host pypi.python.org --trusted-host files.pythonhosted.org --trusted-host pypi.org -r ${PATH_ROOT}docker/python_requirements.txt \
-    # Nvidia
+    # Command
     && command -v nvidia-smi > /dev/null && nvidia-smi --query-gpu=name --format=csv,noheader || echo "Host without nvidia GPU." \
-    # Vulkan
     && command -v vulkaninfo > /dev/null && vulkaninfo | grep "deviceName" || echo "Host without vulkan support." \
-    # OpenGL
     && command -v glxinfo > /dev/null && glxinfo | grep "OpenGL renderer string" || echo "Host without opengl support." \
     # Engine package
     && bash ${PATH_ROOT}script/engine_package.sh \
