--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -79,6 +79,8 @@ RUN cd ~ \
     lld \
     llvm \
     clang \
+    libpipewire-0.3-dev \
+    libgbm-dev \
     # Clean
     && apt-get remove --purge -y sudo \
     && rm -rf /var/lib/apt/lists/* \
