--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -70,6 +70,7 @@ RUN cd ~ \
     libx11-xcb1 \
     libcairo2 \
     # Tauri
+    && apt-get update && apt-get install -y \
     libwebkit2gtk-4.1-dev \
     libxdo-dev \
     libssl-dev \
