--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -28,6 +28,9 @@ ENV VK_ICD_FILENAMES=/usr/share/vulkan/icd.d/lvp_icd.x86_64.json
 
 COPY ./certificate/* /usr/local/share/ca-certificates/
 COPY ./docker/NotoSansJP-Regular.ttf /usr/share/fonts/truetype/noto/
+COPY ./docker/NotoSansSymbols2-Regular.ttf /usr/share/fonts/truetype/noto/
+COPY ./docker/NotoColorEmoji-Regular.ttf /usr/share/fonts/truetype/noto/
+COPY ./docker/font.local.conf /etc/fonts/local.conf
 
 RUN cd ~ \
     # No root
