--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -29,6 +29,9 @@ ENV XWIN_CACHE_DIR="/home/node/xwin_cache/"
 
 COPY ./certificate/* /usr/local/share/ca-certificates/
 COPY ./docker/NotoSansJP-Regular.ttf /usr/share/fonts/truetype/noto/
+COPY ./docker/NotoSansSymbols2-Regular.ttf /usr/share/fonts/truetype/noto/
+COPY ./docker/NotoColorEmoji-Regular.ttf /usr/share/fonts/truetype/noto/
+COPY ./docker/font.local.conf /etc/fonts/local.conf
 
 RUN cd ~ \
     # No root
