--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -20,9 +20,16 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 ENV SUDO_FORCE_REMOVE=yes
 ENV NODE_OPTIONS=--use-openssl-ca
+ENV WAYLAND_DISPLAY=wayland-0
+ENV XDG_SESSION_TYPE=wayland
+ENV ELECTRON_ENABLE_WAYLAND=1
+ENV ELECTRON_OZONE_PLATFORM_HINT=auto
+ENV OZONE_PLATFORM=wayland
+ENV EGL_PLATFORM=wayland
+ENV ANGLE_DEFAULT_PLATFORM=egl
+ENV PULSE_SERVER=unix:/mnt/wslg/PulseServer
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=all
-ENV VK_ICD_FILENAMES=/usr/share/vulkan/icd.d/lvp_icd.x86_64.json
 ENV PATH="${PATH}:/home/node/.cargo/bin/"
 ENV RUST_BACKTRACE=1
 ENV XWIN_CACHE_DIR="/home/node/xwin_cache/"
@@ -35,43 +42,39 @@ COPY ./docker/font.local.conf /etc/fonts/local.conf
 
 RUN cd ~ \
     # No root
-    && mkdir -p ${PATH_ROOT} \
-    && chown -R node:node ${PATH_ROOT} \
+    && useradd -U node -d ${PATH_ROOT} -s /bin/bash \
+    && uid="$(id -u node)" \
+    && mkdir -p ${PATH_ROOT} "/run/user/${uid}" \
+    && chown -R node:node ${PATH_ROOT} "/run/user/${uid}" \
     && chmod -R 775 ${PATH_ROOT} \
+    && chmod -R 700 "/run/user/${uid}" \
     # Update
     && VERSION_CODENAME=$(grep VERSION_CODENAME= /etc/os-release | cut -d= -f2) \
     && chmod -R 0644 /usr/local/share/ca-certificates/ \
-    && apt-get update && apt-get install -y ca-certificates tzdata curl media-types \
+    && apt-get update && apt-get install -y ca-certificates tzdata curl media-types jq \
     && update-ca-certificates \
     && ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} > /etc/timezone \
     && echo "application/typescript ts" >> /etc/mime.types \
-    # Dbus
-    && apt-get update && apt-get install -y \
-    dbus \
-    dbus-x11 \
-    # GPU
+    # Wslg
     && apt-get update && apt-get install -y \
     libglib2.0-0 \
     libgtk-3-0 \
+    libcairo2 \
+    libfontconfig1 \
+    libfreetype6 \
     libnss3 \
     libnspr4 \
-    libx11-6 \
-    libxext6 \
-    libxrender1 \
-    libxrandr2 \
-    libfreetype6 \
-    libfontconfig1 \
     libasound2 \
-    libgomp1 \
     libgbm1 \
-    libglu1-mesa \
-    libvulkan1 \
-    mesa-vulkan-drivers \
-    mesa-utils \
+    libegl1 \
+    libegl1-mesa \
+    libgl1-mesa-dri \
+    libdrm2 \
+    libwayland-client0 \
+    libwayland-egl1 \
+    libwayland-cursor0 \
+    libgomp1 \
     xdg-utils \
-    libxcb1 \
-    libx11-xcb1 \
-    libcairo2 \
     # Tauri
     && apt-get update && apt-get install -y \
     libwebkit2gtk-4.1-dev \
@@ -94,20 +97,22 @@ RUN cd ~ \
 
 USER node
 
-# Rust
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+RUN \
+    # Rust
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
     && rustup target add x86_64-unknown-linux-gnu \
     && rustup target add x86_64-pc-windows-msvc \
     && cargo install --locked cargo-xwin
 
 WORKDIR ${PATH_ROOT}
 
-# Tls
-CMD bash ${PATH_ROOT}script/tls.sh \
+CMD \
+    # Tls
+    bash ${PATH_ROOT}script/tls.sh \
     # Command
-    && command -v nvidia-smi > /dev/null && nvidia-smi --query-gpu=name --format=csv,noheader || echo "Host without nvidia GPU." \
-    && command -v vulkaninfo > /dev/null && vulkaninfo | grep "deviceName" || echo "Host without vulkan support." \
-    && command -v glxinfo > /dev/null && glxinfo | grep "OpenGL renderer string" || echo "Host without opengl support." \
+    command -v nvidia-smi > /dev/null && nvidia-smi --query-gpu=name --format=csv,noheader || echo "Host without nvidia GPU support." \
+    # Dbus
+    && bash ${PATH_ROOT}script/dbus.sh \
     # Rust
     && rustc --version \
     && cargo --version \
