--- a/env/local.env
+++ b/env/local.env
@@ -7,6 +7,9 @@ DOMAIN='localhost'
 TIME_ZONE='Asia/Tokyo'
 LANG='C.UTF-8'
 PATH_ROOT='/home/app/'
+PATH_FILE='file/'
+PATH_LOG='log/'
+PATH_SCRIPT='script/'
 
 NODEJS_SERVER_PORT='1443'
 NODEJS_SERVER_PORT_RANGE='30000-30003'
