--- a/docker-compose-cpu.yaml
+++ b/docker-compose-cpu.yaml
@@ -17,13 +17,14 @@ services:
     ports:
       - 127.0.0.1:${NODEJS_SERVER_PORT}:${NODEJS_SERVER_PORT}
       - 127.0.0.1:${NODEJS_SERVER_PORT_RANGE}:${NODEJS_SERVER_PORT_RANGE}
-    volumes:
-      - ./:${PATH_ROOT}
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /tmp/.X11-unix:/tmp/.X11-unix
-      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./:${PATH_ROOT}
+      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+      - /mnt/wslg:/mnt/wslg
   cimo_ow_python_cpu:
     container_name: cimo-ow-python-cpu
     env_file:
@@ -40,13 +41,14 @@ services:
         _PYTHON_JUPYTER_PORT: ${PYTHON_JUPYTER_PORT}
     ports:
       - 127.0.0.1:${PYTHON_JUPYTER_PORT}:${PYTHON_JUPYTER_PORT}
-    volumes:
-      - ./:${PATH_ROOT}
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /tmp/.X11-unix:/tmp/.X11-unix
-      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./:${PATH_ROOT}
+      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+      - /mnt/wslg:/mnt/wslg
     depends_on:
       - cimo_ow_nodejs_cpu
   cimo_ow_apache:
@@ -65,10 +67,11 @@ services:
         _APACHE_SERVER_PORT: ${APACHE_SERVER_PORT}
     ports:
       - 127.0.0.1:443:${APACHE_SERVER_PORT}
-    volumes:
-      - ./:${PATH_ROOT}
-      - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./:${PATH_ROOT}
+      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - cimo_ow_nodejs_cpu
