--- a/docker-compose-gpu.yaml
+++ b/docker-compose-gpu.yaml
@@ -17,16 +17,21 @@ services:
     ports:
       - 127.0.0.1:${NODEJS_SERVER_PORT}:${NODEJS_SERVER_PORT}
       - 127.0.0.1:${NODEJS_SERVER_PORT_RANGE}:${NODEJS_SERVER_PORT_RANGE}
-    volumes:
-      - ./:${PATH_ROOT}
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /tmp/.X11-unix:/tmp/.X11-unix
-      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./:${PATH_ROOT}
+      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+      - /mnt/wslg:/mnt/wslg
     devices:
       - /dev/dri:/dev/dri
-    runtime: "nvidia"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
   cimo_ow_python_gpu:
     container_name: cimo-ow-python-gpu
     env_file:
@@ -43,16 +48,21 @@ services:
         _PYTHON_JUPYTER_PORT: ${PYTHON_JUPYTER_PORT}
     ports:
       - 127.0.0.1:${PYTHON_JUPYTER_PORT}:${PYTHON_JUPYTER_PORT}
-    volumes:
-      - ./:${PATH_ROOT}
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /tmp/.X11-unix:/tmp/.X11-unix
-      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./:${PATH_ROOT}
+      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+      - /mnt/wslg:/mnt/wslg
     devices:
       - /dev/dri:/dev/dri
-    runtime: "nvidia"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
     depends_on:
       - cimo_ow_nodejs_gpu
   cimo_ow_apache:
@@ -71,10 +81,11 @@ services:
         _APACHE_SERVER_PORT: ${APACHE_SERVER_PORT}
     ports:
       - 127.0.0.1:443:${APACHE_SERVER_PORT}
-    volumes:
-      - ./:${PATH_ROOT}
-      - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    volumes:
+      - ./:${PATH_ROOT}
+      - ms_cronjob-volume:${PATH_ROOT}.ms_cronjob-volume/:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - cimo_ow_nodejs_gpu
