--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -33,7 +33,7 @@ RUN cd ~ \
     # Update
     && VERSION_CODENAME=$(grep VERSION_CODENAME= /etc/os-release | cut -d= -f2) \
     && chmod -R 0644 /usr/local/share/ca-certificates/ \
-    && apt-get update && apt-get install -y ca-certificates tzdata curl media-types gettext-base lynx \
+    && apt-get update && apt-get install -y ca-certificates tzdata curl media-types jq gettext-base lynx \
     && update-ca-certificates \
     && ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} > /etc/timezone \
     && echo "application/typescript ts" >> /etc/mime.types \
@@ -50,8 +50,9 @@ USER www-data
 
 WORKDIR ${PATH_ROOT}
 
-# Httpd
-CMD apachectl start \
+CMD \
+    # Httpd
+    apachectl start \
     && apachectl configtest \
     && apachectl status \
     # Keep running
