--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -22,12 +22,14 @@ ENV SUDO_FORCE_REMOVE=yes
 ENV NODE_OPTIONS=--use-openssl-ca
 ENV WAYLAND_DISPLAY=wayland-0
 ENV XDG_SESSION_TYPE=wayland
+ENV XDG_RUNTIME_DIR="/mnt/wslg/runtime-dir/"
 ENV ELECTRON_ENABLE_WAYLAND=1
 ENV ELECTRON_OZONE_PLATFORM_HINT=auto
 ENV OZONE_PLATFORM=wayland
 ENV EGL_PLATFORM=wayland
 ENV ANGLE_DEFAULT_PLATFORM=egl
-ENV PULSE_SERVER=unix:/mnt/wslg/PulseServer
+ENV DBUS_SESSION_BUS_ADDRESS="unix:path=${XDG_RUNTIME_DIR}/bus"
+ENV PULSE_SERVER="unix:/mnt/wslg/PulseServer"
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=all
 ENV PATH="${PATH}:/home/node/.cargo/bin/"
